@@ -1,3 +1,11 @@
+2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw.c
+	(clearlooks_draw_list_view_header):
+	* engines/clearlooks/src/clearlooks_style.c
+	(clearlooks_style_draw_shadow):
+	Old looking scrolled window.
+
 2008-05-11  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw.c
